; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/enetc/extr_enetc.c_enetc_bd_ready_count.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/enetc/extr_enetc.c_enetc_bd_ready_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.enetc_bdr = type { i32, i32 }

@ENETC_TBCIR_IDX_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.enetc_bdr*, i32)* @enetc_bd_ready_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enetc_bd_ready_count(%struct.enetc_bdr* %0, i32 %1) #0 {
  %3 = alloca %struct.enetc_bdr*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.enetc_bdr* %0, %struct.enetc_bdr** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.enetc_bdr*, %struct.enetc_bdr** %3, align 8
  %7 = getelementptr inbounds %struct.enetc_bdr, %struct.enetc_bdr* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @enetc_rd_reg(i32 %8)
  %10 = load i32, i32* @ENETC_TBCIR_IDX_MASK, align 4
  %11 = and i32 %9, %10
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp sge i32 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %4, align 4
  %18 = sub nsw i32 %16, %17
  br label %27

19:                                               ; preds = %2
  %20 = load %struct.enetc_bdr*, %struct.enetc_bdr** %3, align 8
  %21 = getelementptr inbounds %struct.enetc_bdr, %struct.enetc_bdr* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* %4, align 4
  %24 = sub nsw i32 %22, %23
  %25 = load i32, i32* %5, align 4
  %26 = add nsw i32 %24, %25
  br label %27

27:                                               ; preds = %19, %15
  %28 = phi i32 [ %18, %15 ], [ %26, %19 ]
  ret i32 %28
}

declare dso_local i32 @enetc_rd_reg(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
